--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "cross-spawn": "^7.0.3",
     "date-fns": "^2.26.0",
     "escape-util": "^0.0.1",
@@ -20,9 +21,12 @@
     "parse": "^3.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.18",
     "react-router-dom": "^6.0.1",
     "react-scripts": "^4.0.3",
+    "react-select": "^5.2.1",
     "recharts": "^2.1.6",
+    "timeago.js": "^4.0.0-beta.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -48,5 +52,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3800/api"
 }
